added extra styling

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
           add_circle
         </span>
       </div>
-      <div class="skill html">33%</div>
+      <div class="skill html"></div>
+      <h4>33% complete</h4>
       <div class="todo">
         <form>
           <label>
-          <input class="checkbox"   type="checkbox" checked="false">Mediation</input>
+          <input class="checkbox"   type="checkbox">Mediation</input>
         </label>
           <label>
           <input class="checkbox"  type="checkbox">Pickup Anna</input>
         </label>
         <label>
-          <input class="checkbox"  type="checkbox">SetUp Meeting with Jay</input>
+          <input class="checkbox"  type="checkbox" >SetUp Meeting with Jay</input>
         </label>
         <label>
           <input class="checkbox"  type="checkbox">Finish daily Ui</input>
