added todo items using js components

--- a/index.html
+++ b/index.html
@@ -37,35 +37,42 @@
       <div class="skill html"></div>
       <h4>33% complete</h4>
       <div class="todo">
-        <form>
+        <todo-list id="todoList">
+          <!-- <form>
           <label>
-          <input class="checkbox"   type="checkbox">Mediation</input>
+          <input class="checkbox"   type="checkbox"> </input>
         </label>
           <label>
-          <input class="checkbox"  type="checkbox">Pickup Anna</input>
+          <input class="checkbox"  type="checkbox"> </input>
         </label>
         <label>
-          <input class="checkbox"  type="checkbox" >SetUp Meeting with Jay</input>
+          <input class="checkbox"  type="checkbox" > </input>
         </label>
         <label>
-          <input class="checkbox"  type="checkbox">Finish daily Ui</input>
+          <input class="checkbox"  type="checkbox"> </input>
         </label>
         <label>
-          <input class="checkbox"  type="checkbox">Second edits on article</input>
+          <input class="checkbox"  type="checkbox"> </input>
         </label>
         <label>
-          <input class="checkbox"   type="checkbox">Email Chris</input>
+          <input class="checkbox"   type="checkbox"> </input>
         </label>
           
-        </form>
+        </form> -->
+        </todo-list>
       </div>
-      <hr>
+      <hr />
       <h4>Pulling from recurring lists</h4>
-      <div id="first"><p class="daily">Daily</p> <p class="weekly"> Weekly </p></div>
-      <div id="second"><p class="monthly" >Monthly</p> <p class="ocassional" >Ocassional</p></div>
+      <div id="first">
+        <p class="daily">Daily</p>
+        <p class="weekly">Weekly</p>
+      </div>
+      <div id="second">
+        <p class="monthly">Monthly</p>
+        <p class="ocassional">Ocassional</p>
+      </div>
     </main>
-    
-    <script src="styles.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
