added more styling

--- a/index.html
+++ b/index.html
@@ -35,31 +35,9 @@
         </span>
       </div>
       <div class="skill html"></div>
-      <h4>33% complete</h4>
+      <h5>33% complete</h5>
       <div class="todo">
-        <todo-list id="todoList">
-          <!-- <form>
-          <label>
-          <input class="checkbox"   type="checkbox"> </input>
-        </label>
-          <label>
-          <input class="checkbox"  type="checkbox"> </input>
-        </label>
-        <label>
-          <input class="checkbox"  type="checkbox" > </input>
-        </label>
-        <label>
-          <input class="checkbox"  type="checkbox"> </input>
-        </label>
-        <label>
-          <input class="checkbox"  type="checkbox"> </input>
-        </label>
-        <label>
-          <input class="checkbox"   type="checkbox"> </input>
-        </label>
-          
-        </form> -->
-        </todo-list>
+        <todo-list id="todoList"> </todo-list>
       </div>
       <hr />
       <h4>Pulling from recurring lists</h4>
@@ -73,6 +51,7 @@
       </div>
     </main>
 
+    <script src="list-style.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
