added compnents of the last div

--- a/index.html
+++ b/index.html
@@ -41,17 +41,11 @@
       </div>
       <hr />
       <h4>Pulling from recurring lists</h4>
-      <div id="first">
-        <p class="daily">Daily</p>
-        <p class="weekly">Weekly</p>
-      </div>
-      <div id="second">
-        <p class="monthly">Monthly</p>
-        <p class="ocassional">Ocassional</p>
-      </div>
+      <recurring-lists></recurring-lists>
     </main>
 
     <script src="list-style.js"></script>
     <script src="script.js"></script>
+    <script src="recurring-lists.js"></script>
   </body>
 </html>
