--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
     <script src="list-style.js"></script>
     <script src="script.js"></script>
     <script src="recurring-lists.js"></script>
+    <script src="todo-list-item.js"></script>
   </body>
 </html>
